# DOG-editor

./: CMakeLists.txt  README.md
ext/libigl/include/igl/opengl/: MeshGL copy.cpp  MeshGL_curved_rendering.cpp
src/: DeformationController.cpp  DeformationController.h  ModelState.cpp  ModelState.h  ModelViewer.cpp  ModelViewer.h  main.cpp
src/Dog/: Dog.cpp  Dog.h  DogSolver.cpp  DogSolver.h
src/Dog/Objectives/: BendingObjective.cpp  BendingObjective.h  DogConstraints.cpp  DogConstraints.h  IsometryObjective.cpp  IsometryObjective.h  LengthRegularizerConstraints.cpp  LengthRegularizerConstraints.h
src/Gui/: DogEditor.cpp  DogEditor.h  EditingUtils.cpp  EditingUtils.h  Rendering.cpp  Rendering.h  VertexPicker.cpp  VertexPicker.h
src/Optimization/: CompositeConstraints.h  CompositeObjective.h  Constraints.h  Objective.cpp  Objective.h  PositionalConstraints.h  QuadraticConstraintsSumObjective.h  Solver.h  line_search.cpp  line_search.h
src/Optimization/Solvers/: EqSQP.cpp  EqSQP.h
src/Optimization/Solvers/Pardiso/: PardisoSolver.cpp  PardisoSolver.h
src/QuadMesh/: Edge.h  Quad.cpp  Quad.h
